--- a/nginx.conf
+++ b/nginx.conf
@@ -19,5 +19,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        # SSE 长连接配置
+        location /progress {
+            proxy_pass http://standai_stt_app:5000/progress;
+            proxy_set_header Connection keep-alive;
+            proxy_cache off;
+            proxy_buffering off;
+            chunked_transfer_encoding on;
+            proxy_read_timeout 3600s;  # 设置超时时间为1小时
+            proxy_send_timeout 3600s;  # 设置发送超时时间为1小时
+            keepalive_timeout 3600s;   # 保持连接超时
+        }
     }
 }
