修改获取上传进度为websocket

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,11 @@ events {
 }
 
 http {
-        # 定义上游服务器（Flask 应用）
+    # 定义上游服务器（Flask 应用）
     upstream flask_app {
         server standai_stt_app:5000;  # 使用 Docker 服务名称和端口
     }
-
+    client_max_body_size 2000M;  # 允许最大上传 500MB
     server {
         listen 80;
         server_name standai.tech;
@@ -20,16 +20,22 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # SSE 长连接配置
-        location /progress {
-            proxy_pass http://standai_stt_app:5000/progress;
-            proxy_set_header Connection keep-alive;
+        location /upload-progress {
+            proxy_pass http://standai_stt_app:5000;
+            proxy_buffering off;  # 禁用缓冲
             proxy_cache off;
-            proxy_buffering off;
-            chunked_transfer_encoding on;
-            proxy_read_timeout 3600s;  # 设置超时时间为1小时
-            proxy_send_timeout 3600s;  # 设置发送超时时间为1小时
-            keepalive_timeout 3600s;   # 保持连接超时
+            proxy_request_buffering off;  # 让 Nginx 直接转发，不等上传完成
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+        }
+        
+        location /upload-file {
+            proxy_pass http://standai_stt_app:5000;
+            proxy_buffering off;  # 禁用缓冲
+            proxy_cache off;
+            proxy_request_buffering off;  # 让 Nginx 直接转发，不等上传完成
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
         }
     }
 }
