--- a/nginx.conf
+++ b/nginx.conf
@@ -18,16 +18,20 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # WebSocket 支持
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
         }
 
-        location /upload-progress {
-            proxy_pass http://standai_stt_app:5000;
-            proxy_buffering off;  # 禁用缓冲
-            proxy_cache off;
-            proxy_request_buffering off;  # 让 Nginx 直接转发，不等上传完成
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-        }
+        # location /upload-progress {
+        #     proxy_pass http://standai_stt_app:5000;
+        #     proxy_buffering off;  # 禁用缓冲
+        #     proxy_cache off;
+        #     proxy_request_buffering off;  # 让 Nginx 直接转发，不等上传完成
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Connection "";
+        # }
         
         location /upload-file {
             proxy_pass http://standai_stt_app:5000;
@@ -36,6 +40,10 @@ http {
             proxy_request_buffering off;  # 让 Nginx 直接转发，不等上传完成
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+
+            # 增加 WebSocket 超时时间
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
         }
     }
 }
